--- a/lib-python-java/Cinema_Booking/.gitignore
+++ b/lib-python-java/Cinema_Booking/.gitignore
@@ -27,3 +27,19 @@ bin/
 
 ### Mac OS ###
 .DS_Store
+# IntelliJ IDEA
+.idea/
+*.iml
+out/
+build/
+target/
+
+# Java
+*.class
+*.jar
+*.war
+*.ear
+
+# System
+.DS_Store
+Thumbs.db
